added websocket, notification fixed some issues
