# src/notifications/notification.entity.ts
@@ -1,6 +1,13 @@
-import { Entity, PrimaryGeneratedColumn, Column, ManyToOne, CreateDateColumn } from 'typeorm';
+import {
+  Entity,
+  PrimaryGeneratedColumn,
+  Column,
+  ManyToOne,
+  CreateDateColumn,
+  Index,
+} from 'typeorm';
 import { User } from '../users/entities/user.entity';
-import { NotificationPriority } from '../common/enums';
+import { NotificationPriority, NotificationType } from '../common/enums';
 import { NotificationAction } from '../common/types';
 
 @Entity('notifications')
@@ -8,8 +15,7 @@ export class Notification {
   @PrimaryGeneratedColumn('uuid')
   id: string;
 
-
-  @ManyToOne(() => User, u => u.notifications, { onDelete: 'CASCADE' })
+  @ManyToOne(() => User, (u) => u.notifications, { onDelete: 'CASCADE' })
   recipient: User;
 
   @Column()
@@ -18,19 +24,29 @@ export class Notification {
   @Column({ type: 'text', nullable: true })
   description?: string;
 
+  @Index()
   @CreateDateColumn()
   timestamp: Date;
 
+  @Column({
+    type: 'enum',
+    enum: NotificationType,
+    default: NotificationType.TRIP,
+  })
+  type: NotificationType;
 
   @Column({ type: 'jsonb', nullable: true })
   action?: NotificationAction;
 
-  @Column({ type: 'enum', enum: NotificationPriority, default: NotificationPriority.NORMAL })
+  @Column({
+    type: 'enum',
+    enum: NotificationPriority,
+    default: NotificationPriority.NORMAL,
+  })
   priority: NotificationPriority;
 
   @Column({ default: false })
   isRead: boolean;
-
 
   @Column({ type: 'jsonb', nullable: true })
   meta?: Record<string, any>;
